--- a/app/src/main/res/layout/activity_usuario_seleciona_pagamento.xml
+++ b/app/src/main/res/layout/activity_usuario_seleciona_pagamento.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/include16"
-        layout="@layout/toolbar_add"
+        layout="@layout/toolbar2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
