--- a/app/src/main/res/layout/adapter_carrinho.xml
+++ b/app/src/main/res/layout/adapter_carrinho.xml
@@ -24,7 +24,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textNomeProduto"
+                android:id="@+id/text_nome_produto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
