--- a/app/src/main/res/layout/activity_usuario_resumo_pedido.xml
+++ b/app/src/main/res/layout/activity_usuario_resumo_pedido.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.usuario.UsuarioResumoPedidoActivity">
+    tools:context=".activity.usuario.UsuarioResumoPedidoActivity">
 
     <include
         android:id="@+id/include18"
