tela de favoritos do usuario finalizada, app clone do Ifood finalizado.

--- a/app/src/main/res/layout/activity_pedido_detalhe.xml
+++ b/app/src/main/res/layout/activity_pedido_detalhe.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.usuario.PedidoDetalheActivity">
+    tools:context=".activities.usuario.PedidoDetalheActivity">
 
     <include
         android:id="@+id/include19"
@@ -358,7 +358,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_item_pedido"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
